AC_INIT(README)

AC_CONFIG_HEADER(config.h)
AC_PROG_CC()
CFLAGS=-g
AC_PROG_INSTALL()

AC_ARG_WITH(krb5,
[  --with-krb5=dir         use Kerberos 5 headers and libs under dir],
if test x$withval != xyes ; then
	KRB5=$withval
	CPPFLAGS="-I$withval/include $CPPFLAGS"
	CFLAGS="-I$withval/include $CFLAGS"
	LDFLAGS="-L$withval/lib $LDFLAGS"
fi
)

AC_ARG_WITH(krbafs,
[  --with-krbafs=dir       use Kerberos 5-hacked krbafs package under dir],
if test x$withval != xyes ; then
	KRBAFS=$withval
	CPPFLAGS="-I$withval/include $CPPFLAGS"
	CFLAGS="-I$withval/include $CFLAGS"
	LDFLAGS="-L$withval/lib $LDFLAGS"
fi
)

OS=`uname`
SHTARGETS=pam_krb5.so
MAN5TARGETS=pam_krb5.5
MAN8TARGETS=pam_krb5.8

AC_CHECK_HEADERS(sys/stat.h sys/types.h stdio.h stdlib.h string.h unistd.h\
		 fcntl.h limits.h pwd.h dlfcn.h com_err.h syslog.h sys/syslog.h\
		 ctype.h security/pam_appl.h security/pam_modules.h)
AC_CHECK_HEADER(krb5.h,AC_DEFINE(HAVE_KRB5_H),
	AC_ERROR(install Kerberos 5 or re-run configure with --with-krb5))

AC_CHECK_LIB(c,sprintf,,,$LIBS)
AC_CHECK_LIB(socket,connect,,,$LIBS)
AC_CHECK_LIB(nsl,yp_bind,,,$LIBS)
AC_CHECK_LIB(resolv,res_mkquery,,,$LIBS)
AC_CHECK_LIB(crypt,crypt,,,$LIBS)
AC_CHECK_LIB(dl,dlopen,,,$LIBS)
AC_CHECK_LIB(com_err,error_message,,,$LIBS)
AC_CHECK_LIB(k5crypto,krb5_des_string_to_key,,,$LIBS)
AC_CHECK_LIB(krb5,krb5_init_context,,,$LIBS)
AC_CHECK_LIB(des425,des_string_to_key,,,$LIBS)
AC_CHECK_HEADER(kerberosIV/krb.h,
	AC_DEFINE(HAVE_KERBEROSIV_KRB_H)
	AC_CHECK_LIB(krb4,in_tkt,,,$LIBS)
	AC_CHECK_LIB(krb524,krb524_convert_creds_kdc,,,$LIBS)
)
if test x$ac_cv_lib_krb4_in_tkt = xyes ; then
	AC_CHECK_HEADER(krbafs.h,
			AC_DEFINE(HAVE_KRBAFS_H)
			AC_CHECK_LIB(krbafs,krb_afslog,
				SHTARGETS="$SHTARGETS pam_krb5afs.so"
				MAN5TARGETS="$MAN5TARGETS pam_krb5afs.5"
				MAN8TARGETS="$MAN8TARGETS pam_krb5afs.8",
				AC_WARN(omitting token-grabbing functions),
				$LIBS),
			AC_WARN(omitting token-grabbing functions)
	,,$LIBS)
fi
AC_CHECK_HEADER(kadm5/admin.h)
AC_CHECK_LIB(gssrpc,svc_auth_any)
AC_CHECK_LIB(gssapi_krb5,krb5_gss_init_sec_context)
AC_CHECK_LIB(kdb5,krb5_db_init)
AC_CHECK_LIB(kadm5clnt,kadm5_init_with_password)
AC_SUBST(KRB5)
AC_SUBST(KRBAFS)

OSTARGETS=`echo $SHTARGETS | sed "s^\.so^\.so\.$OS^g"`

AC_SUBST(SHTARGETS)
AC_SUBST(OSTARGETS)
AC_SUBST(MAN5TARGETS)
AC_SUBST(MAN8TARGETS)

AC_OUTPUT(Makefile)
